# graphtype

./: graphtype.cabal
src/: GraphType.hs  Parse.hs
