Name:                graphtype
Version:             0.3.0
copyright:           (c) 2009,2010 Dmitry Astapov
Synopsis:            A simple tool to illustrate dependencies between Haskell types
Description:         This tools produces diagrams of Haskell type interdependencies in the given source.
                     Actual drawing is done by graphviz tools (dot).
License:             BSD3
License-file:        LICENSE
Author:              Dmitry Astapov
build-type: 	     Simple
homepage:            http://github.com/J0J0/graphtype
cabal-version:       2.0

tested-with:         GHC == 9.0.2

extra-source-files:
        README
        LICENSE
        example/Test01.hs
        example/Test02.hs
        example/test.sh

Executable graphtype
  hs-source-dirs:	     src
  Main-is:             GraphType.hs
  other-modules:
        Parse
        OptionParser
  Build-Depends:       base >=4.5 && <5,
                       haskell-src-exts ^>= 1.18.0,
                       uniplate,
                       containers,
                       dotgen >= 0.4.1

source-repository head
  type:      git
  location:  git://github.com/explicitcall/graphtype.git
